- DietPi-Software | Moved majority of conf/* files located on DietPi-RAMdisk, moved over to github for download during installations. Reducing the size of RAMdisk usage.
- DietPi-Software | Pydio: Added rewrite rules to all webserver configs to allow sync client connection out of the box. Thanks to @MonZon for reporting this issue: https://github.com/Fourdee/DietPi/issues/2308

Bug Fixes:
- General | Asus TB (based on our recent 2.0.8 Tinker OS pre-image): Resolved issue with corrupt characters in desktops.
- DietPi-Software | Chromium: Resolved incorrect scale of window under Kiosk mode: https://github.com/Fourdee/DietPi/issues/2298#issuecomment-442995196
- DietPi-Software | OMPD: Resolved a reinstall issue due to SQL table not being correctly dropped, before re-created: https://github.com/Fourdee/DietPi/issues/2305
- DietPi-Autostart | XU4: Resolved an issue with startx failing during boot: https://github.com/Fourdee/DietPi/issues/2130#issuecomment-443475525

Allo GUI:
- GMrender: Resolved service failing to be enabled: https://github.com/Fourdee/DietPi/issues/2305

As always, many smaller code performance and stability improvements, visual and spelling fixes have been done, too much to list all of them here. Check out all code changes of this release on GitHub: https://github.com/Fourdee/DietPi/pulls?utf8=%E2%9C%93&q=is%3Apr+is%3Aclosed+base%3Amaster

Known/Outstanding Core Issues:

-----------------------------------------------------------------------------------------------------------

v6.18
(26/11/18)

Changes / Improvements / Optimisations:
 - General | Concurrent execution detection: Now has a 5 second buffer to wait for exit (G_INIT_WAIT_CONCURRENT), before failing: https://github.com/Fourdee/DietPi/issues/2159#issuecomment-433619721
 - DietPi-Config | Added support for changing the brightness of the RPi touchscreen: https://github.com/Fourdee/DietPi/issues/2169
 - DietPi-Config | Added support for setting Xorg DPI scale.