@@ -16342,10 +16342,10 @@ This program is free software: you can redistribute it and/or modify it under th
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n
 You should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses/'
 
-			# - Global PW
 			#	NB: This should be after 1st run update, however, to prevent dupe run of this without requiring an image update, we can do it here.
 			if (( $(</DietPi/dietpi/.update_stage) == -1 )); then
 
+				# - Global PW
 				#	Automation, apply as per dietpi.txt
 				if (( $AUTOINSTALL_ENABLED )); then
 
@@ -16356,6 +16356,22 @@ You should have received a copy of the GNU General Public License along with thi
 
 					/DietPi/dietpi/func/dietpi-set_software passwords
 					Update_Global_Pw
+
+				fi
+
+				# - Disable serial?
+				#	must be enabled for the following:
+				#	XU4: https://github.com/Fourdee/DietPi/issues/2038#issuecomment-416089875
+				#	RockPro64: Fails to boot into kernel without serial enabled
+				#	NanoPi Neo Air: Required for end users/debugging/setting up WiFi without automation
+				if (( $(grep -m1 '^[[:blank:]]*CONFIG_SERIAL_CONSOLE_ENABLE=' /DietPi/dietpi.txt | sed 's/^.*=//') == 1 &&
+					$G_HW_MODEL != 11 && $G_HW_MODEL != 42 && $G_HW_MODEL != 64 )); then
+
+					if G_WHIP_YESNO 'Serial console is currently enabled, would you like to disable it?\n - Disabling serial console will reduce memory consumption slightly\n - If you are unsure on what serial console is, it is safe to disable it'; then
+
+						/DietPi/dietpi/func/dietpi-set_hardware serialconsole disable
+
+					fi
 
 				fi
 
