@@ -10,6 +10,7 @@ Changes / Improvements / Optimisations:
 - DietPi-Software | Reboot prompt: Will now occur prior to the system rebooting. Giving you time to do more, before rebooting! :D
 - DietPi-Software | Moved majority of conf/* files located on DietPi-RAMdisk, moved over to github for download during installations. Reducing the size of RAMdisk usage.
 - DietPi-Software | Pydio: Added rewrite rules to all webserver configs to allow sync client connection out of the box. Thanks to @MonZon for reporting this issue: https://github.com/Fourdee/DietPi/issues/2308
+- PREP | Serial console: Now enabled by default for all future DietPi images. Please note, only v6.19 images and above, will have this set by default. Existing images require edit of /boot/dietpi.txt and 'CONFIG_SERIAL_CONSOLE_ENABLE=1' before 1st run: https://github.com/Fourdee/DietPi/issues/2313
 
 Bug Fixes:
 - General | Asus TB (based on our recent 2.0.8 Tinker OS pre-image): Resolved issue with corrupt characters in desktops.
